--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CRUD OPERATION</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>CRUD OPERATION</h1>
+        <div id="inputBox">
+            <div class="d-flex flex-row mb-3 userInputBox" id="nameInput">
+                <label for="" class="form-label">Name: </label>
+                <input type="text" class="form-control" id="" placeholder="">
+            </div>
+
+            <div class="d-flex flex-row mb-3 userInputBox" id="nameInput">
+                <label for="" class="form-label">Age: </label>
+                <input type="text" class="form-control" id="" placeholder="">
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
