--- a/index.html
+++ b/index.html
@@ -10,18 +10,50 @@
 <body>
     <div class="container">
         <h1>CRUD OPERATION</h1>
-        <div id="inputBox">
-            <div class="d-flex flex-row mb-3 userInputBox" id="nameInput">
-                <label for="" class="form-label">Name: </label>
-                <input type="text" class="form-control" id="" placeholder="">
+        <!-- NAME -->
+        <div class="row">
+            <div class="col col-lg-2">
+                <h3>Name:</h3>
             </div>
-
-            <div class="d-flex flex-row mb-3 userInputBox" id="nameInput">
-                <label for="" class="form-label">Age: </label>
+            <div class="col">
                 <input type="text" class="form-control" id="" placeholder="">
             </div>
         </div>
 
+        <!-- AGE -->
+        <div class="row">
+            <div class="col col-lg-2">
+                <h3>Age:</h3>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" id="" placeholder="">
+            </div>
+        </div>
+
+        <!-- GENDER -->
+        <div class="row">
+            <div class="col col-lg-2">
+                <h3>Gender:</h3>
+            </div>
+            <div class="col">
+                <div class="dropdown">
+                    <button class="btn btn-light dropdown-toggle form-control" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Gender
+                    </button>
+                    <ul class="dropdown-menu form-control">
+                      <li><a class="dropdown-item" href="#">Male</a></li>
+                      <li><a class="dropdown-item" href="#">Female</a></li>
+                      <li><a class="dropdown-item" href="#">Others</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- IMAGE -->
+
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 </body>
 </html>
