--- a/index.html
+++ b/index.html
@@ -37,19 +37,28 @@
             </div>
             <div class="col">
                 <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle form-control" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Gender
-                    </button>
-                    <ul class="dropdown-menu form-control">
-                      <li><a class="dropdown-item" href="#">Male</a></li>
-                      <li><a class="dropdown-item" href="#">Female</a></li>
-                      <li><a class="dropdown-item" href="#">Others</a></li>
-                    </ul>
+                    <select class="form-control" aria-label="Default select example">
+                        <option value="P">Select:</option>
+                        <option value="A">Male</option>
+                        <option value="B">Female</option>
+                        <option value="C">Others</option>
+                    </select>
                 </div>
             </div>
         </div>
 
         <!-- IMAGE -->
+        <div class="row">
+            <div class="col col-lg-2">
+                <h3>Image:</h3>
+            </div>
+            <div class="col">
+                <div class="mb-3">
+                    <input class="form-control" type="file" id="formFile">
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
