--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h3>Name:</h3>
             </div>
             <div class="col">
-                <input type="text" class="form-control" id="" placeholder="">
+                <input type="text" class="form-control" id="name" placeholder="">
             </div>
         </div>
 
@@ -26,7 +26,7 @@
                 <h3>Age:</h3>
             </div>
             <div class="col">
-                <input type="text" class="form-control" id="" placeholder="">
+                <input type="text" class="form-control" id="age" placeholder="">
             </div>
         </div>
 
@@ -37,11 +37,11 @@
             </div>
             <div class="col">
                 <div class="dropdown">
-                    <select class="form-control" aria-label="Default select example">
-                        <option value="P">Select:</option>
-                        <option value="A">Male</option>
-                        <option value="B">Female</option>
-                        <option value="C">Others</option>
+                    <select class="form-control" id="gender" aria-label="Default select example">
+                        <option value="Not Selected">Select:</option>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="Others">Others</option>
                     </select>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <button type="button" class="btn btn-primary btn-lg">Submit</button>
+        <button type="button" class="btn btn-primary btn-lg" id="submit">Submit</button>
     </div>
 
     <!-- TABLE INFORMATION SHOw -->
@@ -68,53 +68,18 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./photo-1611186871348-b1ce696e52c9.jpg" class="card-img-top image" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Name: <span id="nameFill">00</span></h5>
+                  <p class="card-text">Age: <span id="ageFill">00</span></p>
+                  <p class="card-text">Gender: <span id="genderFill">00</span></p>
                 </div>
               </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  </div>
-                </div>
             </div>
         </div>
-
     </div>
 
+    <script src="form.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 </body>
