card box pattern change

--- a/index.html
+++ b/index.html
@@ -65,16 +65,20 @@
     <!-- TABLE INFORMATION SHOw -->
     <div class="container">
         <h1>TABLE</h1>
+        <!-- edit -->
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-              <div class="card">
-                <img src="./photo-1611186871348-b1ce696e52c9.jpg" class="card-img-top image" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Name: <span id="nameFill">00</span></h5>
-                  <p class="card-text">Age: <span id="ageFill">00</span></p>
-                  <p class="card-text">Gender: <span id="genderFill">00</span></p>
+                <div class="card h-100">
+                    <img src="./photo-1611186871348-b1ce696e52c9.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Name: <span id="nameFill">00</span></h5>
+                        <p class="card-text">Age: <span id="ageFill">00</span></p>
+                        <p class="card-text">Gender: <span id="genderFill">00</span></p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated 3 mins ago</small>
+                    </div>
                 </div>
-              </div>
             </div>
         </div>
     </div>
