--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                         <p class="card-text">Gender: <span id="genderFill">00</span></p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        <a href="#" class="btn btn-primary">Edit</a>
+                        <a href="#" class="btn btn-primary">Delete</a>
                     </div>
                 </div>
             </div>
