delete button added

--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
                 <div class="card h-100">
                     <img src="./photo-1611186871348-b1ce696e52c9.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Name: <span id="nameFill">00</span></h5>
-                        <p class="card-text">Age: <span id="ageFill">00</span></p>
-                        <p class="card-text">Gender: <span id="genderFill">00</span></p>
+                        <h5 class="card-title">Name: <span id="nameFill"></span></h5>
+                        <p class="card-text">Age: <span id="ageFill"></span></p>
+                        <p class="card-text">Gender: <span id="genderFill"></span></p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Edit</a>
-                        <a href="#" class="btn btn-primary">Delete</a>
+                        <div class="d-flex justify-content-between">
+                            <a href="#" class="btn btn-primary">Edit</a>
+                            <a href="#" class="btn btn-primary" id="delete">Delete</a>
+                        </div>
                     </div>
                 </div>
             </div>
